--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 html {
   scroll-behavior: smooth;
 }
-body {
-  /* height: 200vh; */
-}
 #header {
-  background: rgba(255, 255, 255, 0.377);
+  background: rgba(255, 255, 255, 0);
   position: fixed;
   top: 0;
   width: 100%;
@@ -18,20 +15,24 @@ body {
   flex-direction: column;
 }
 .nav-links {
-  width: 80%;
+  width: 100%;
   display: flex;
+  justify-content: space-between;
 }
 #logo {
   margin: 5px 0 0 0;
-  width: 150px;
+  width: 120px;
   border-radius: 100%;
   transition: width 0.4s;
   transition: transform 0.5s;
   filter: saturate(2);
 }
+nav {
+  width: 350px;
+}
 #logo:hover {
-  /* transition: transform 0.5s; */
-  /* transform: rotate(180deg); */
+  transition: transform 0.5s;
+  transform: rotate(360deg);
 }
 .scroll-logo {
   transition: width 0.4s;
@@ -48,12 +49,25 @@ body {
 }
 .nav {
   position: relative;
-  text-decoration: none;
   color: black;
   font-weight: 500;
   margin: 0 10px;
   letter-spacing: 3px;
+  bottom: 60px;
+  transition: width 1s;
+}
+#about-link {
   font-family: "Coda", cursive;
+  text-decoration: none;
+  font-size: 12px;
+}
+#store-link {
+  font-family: "Coda", cursive;
+  text-decoration: none;
+  font-size: 12px;
+}
+#title-link {
+  text-decoration: none;
 }
 .nav:hover {
   color: rgb(230, 74, 69);
@@ -66,32 +80,33 @@ body {
   align-items: center;
   position: relative;
   z-index: 0;
-  /* transition: z-index 0.5s; */
   transform: translateX(-50%);
-  border: rgba(128, 128, 128, 0.068) 1px solid;
   transition: margin 0.5s;
-  background: rgba(128, 128, 128, 0.068);
 }
 .ramen {
+  left: 20%;
   height: 200px;
   width: 500px;
   top: 50px;
-  left: 30%;
+  opacity: 1;
+  transition: left 1s;
   z-index: 2;
   filter: saturate(2);
 }
 .egg {
   height: 190px;
   width: 350px;
-  top: 30px;
+  top: 20px;
   left: 75%;
+  opacity: 1;
+  transition: top 1s;
   z-index: 3;
   filter: grayscale(300) saturate(3);
 }
 .fish {
   width: 300px;
-  height: 300px;
   top: -240px;
+  transition: top 2s;
   left: 50%;
   filter: grayscale(200) saturate(2);
   z-index: 4;
@@ -100,16 +115,33 @@ body {
   height: 300px;
   width: 500px;
   left: 50%;
-  top: -705px;
+  top: -600px;
   z-index: 2;
+  transition: top 1s;
   filter: saturate(1.5);
+}
+.takoyaki {
+  top: -1250px;
+  left: 37%;
+  z-index: 3;
+  width: 300px;
+  height: 130px;
+  transition: left 1s;
+  filter: grayscale(200) saturate(2);
+}
+.cup {
+  top: -1170px;
+  width: 400px;
+  height: 300px;
+  left: 75%;
+  z-index: 1;
 }
 .bento {
   width: 200px;
   height: 200px;
-  z-index: 1;
+  /* z-index: 1;
   top: -960px;
-  left: 30%;
+  left: 30%;*/
   visibility: hidden;
 }
 .pink {
@@ -143,29 +175,14 @@ body {
   font-size: 50px;
   letter-spacing: 10px;
   color: white;
-  /* text-shadow: 0 0 10px rgba(44, 44, 44, 0.5); */
-  /* color: rgb(247, 192, 177); */
-}
-.cup {
-  top: -1250px;
-  left: 27%;
-  z-index: 3;
-  width: 300px;
-  height: 130px;
-  filter: grayscale(200) saturate(2);
-}
-.takoyaki {
-  top: -1170px;
-  width: 400px;
-  height: 300px;
-  left: 75%;
-  z-index: 1;
+  text-decoration: none;
 }
 video {
   border-radius: 5px;
 }
 .titleAbout {
   color: rgb(13, 29, 62);
+  color: white;
   font-weight: 700;
   font-family: "Coda", cursive;
   font-size: 50px;
@@ -175,52 +192,40 @@ video {
   width: 100vw;
   height: 100vh;
   padding-top: 150px;
-  /* height: calc(100vh - 40px); */
-  /* max-height: calc(100vh - 40px); */
   overflow: hidden;
 }
 #about {
   width: 100%;
   height: 100vh;
-  /* height: calc(100vh - 120px); */
-  /* max-height: calc(100vh - 120px); */
   display: flex;
   align-items: center;
   justify-content: center;
-  background: blue;
+  /* background: rgb(62, 84, 69); */
+  background: rgb(192, 179, 189);
   padding-top: 125px;
 }
 .about-box {
   width: 40%;
   height: 80%;
-  /* background: rgb(13, 29, 62); */
   text-align: end;
   padding: 25px;
 }
 .about-box > p {
   color: rgb(13, 29, 62);
+  color: white;
   line-height: 1.6;
   font-family: "Nunito", sans-serif;
 }
 .grid {
   width: 40%;
   height: 80%;
-  background-image: url("https://cdn.vox-cdn.com/thumbor/JUVftf3_hFoke2h-mt2aT5D0Teg=/0x0:2000x1125/1200x0/filters:focal(0x0:2000x1125):no_upscale()/cdn.vox-cdn.com/uploads/chorus_asset/file/13080417/noodles_flavors_of_youth.jpg");
+  background-image: url("./Anime\ Food/j.png");
   background-position: center;
   background-repeat: no-repeat;
-  filter: saturate(1.5);
+  border: solid white 0.5px;
+  border-radius: 2px;
 }
-#menu {
-  display: flex;
-  justify-content: center;
-  padding-top: 130px;
-  /* background: pink; */
-  height: 100vh;
-}
-#menu > img {
-  width: 90%;
-  max-height: 70vh;
-}
+
 #cart-box {
   position: fixed;
   bottom: 0;
@@ -237,19 +242,22 @@ video {
   bottom: 20px;
 }
 #active-cart {
-  width: 165px;
+  min-width: 165px;
   min-height: 300px;
   /* background: rgba(255, 255, 255, 0.459); */
-  background: rgba(230, 230, 250, 0.534);
-  border: solid 1px rgba(255, 255, 255, 0.459);
+  /* background: rgba(230, 230, 250, 0.534); */
+  /* border: solid 1px rgba(255, 255, 255, 0.459); */
   position: fixed;
   right: 20px;
   bottom: 60px;
   border-radius: 2px;
   display: none;
+  text-align: end;
+  /* transform: translateX(-200); */
 }
-#active-cart:hover {
-  display: inherit;
+.addingItem {
+  font-size: 10px;
+  margin: 0 0 10px 0;
 }
 #store {
   max-width: 88%;
@@ -259,7 +267,7 @@ video {
   flex-wrap: wrap;
   /* background: blueviolet; */
   justify-content: center;
-  padding-top: 120px;
+  padding-top: 115px;
   /* margin-bottom: 50px; */
 }
 .store-image {
@@ -274,8 +282,7 @@ video {
 .store-items {
   display: flex;
   width: 250px;
-  height: 200px;
-  /* align-items: center; */
+  height: 180px;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
@@ -298,6 +305,9 @@ video {
   cursor: pointer;
   border: rgba(128, 128, 128, 0.014) solid 0.5px;
 }
+.force-size:hover {
+  border: solid 4px rgb(218, 122, 143);
+}
 .plus-icon {
   z-index: 5;
   width: 20px;
@@ -309,28 +319,121 @@ video {
 }
 #popup {
   position: fixed;
-  top: 38%;
+  top: 30%;
   left: 50%;
-  background: rgba(234, 211, 187, 0.856);
+  /* background: rgba(234, 211, 187, 0.856); */
   width: 300px;
-  height: 300px;
+  height: 370px;
   transform: translateX(-50%);
-  z-index: 6;
+  z-index: 9;
   display: none;
   border-radius: 3px;
-  border: solid 1px rgba(234, 211, 187, 0.911);
-  display: flex;
-  flex-direction: row-reverse;
+  /* border: solid 1px rgba(234, 211, 187, 0.911); */
+  /* display: flex; */
+  flex-direction: column;
+  justify-content: end;
+  background: rgb(253, 242, 244);
+  /* background: black; */
+  border: solid 5px rgb(218, 122, 143);
+  /* border: solid 5px transparent; */
 }
 #X {
-  position: absolute;
   margin: 10px 10px 0 0;
   cursor: pointer;
+  transform: rotate(45deg);
+  height: 20px;
+  position: absolute;
+  right: 0;
+}
+#item-picture-box > div {
+  height: 150px;
+  border: solid black 2px;
+  border: solid rgb(218, 122, 143) 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(253, 242, 244);
+  border-radius: 2px;
 }
 #item-image {
+  border-radius: 3px;
   width: 150px;
+  padding: 10px;
 }
 .flex-x {
   width: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#item-picture-box {
+  margin: 30px auto 10px auto;
+}
+.amount {
+  display: flex;
+  width: 150px;
+  justify-content: space-around;
+  margin: 0 0 10px 0;
+}
+#item-name {
+  font-weight: 600;
+  letter-spacing: 1px;
+  margin-top: 10px;
+}
+#item-des {
+  font-size: 10px;
+  max-width: 150px;
+  margin-bottom: 5px;
+  color: grey;
+}
+button {
+  background: black;
+  color: white;
+  font-weight: 600;
+  font-size: 15px;
+  border-radius: 5px;
+  height: 25px;
+  width: 25px;
+  text-align: center;
+  /* outline: none; */
+  border: none;
+}
+#background {
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(128, 128, 128, 0.466);
+  background: rgba(218, 122, 143, 0.219);
+  z-index: 7;
+  display: none;
+}
+#background-esc {
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
+}
+input {
+  background: rgb(218, 122, 143);
+  color: rgb(253, 242, 244);
+  border: none;
+  padding: 5px;
+  border-radius: 3px;
+  font-weight: 600;
+  min-width: 90px;
+  outline: none;
+}
+input:hover {
+  color: black;
+}
+#cart-value {
+  margin: 5px 0 10px 0;
+}
+#active-cart > h1 {
+  font-family: "Satisfy", cursive;
+}
+#item-cost {
+  text-align: center;
+  margin-top: 10px;
 }
