--- a/style.css
+++ b/style.css
@@ -29,12 +29,10 @@ html {
   transition: transform 0.5s;
   transform: translate(-50%, -50%);
   filter: grayscale(100) contrast(10);
-  /* transition: height 1s linear; */
 }
 #logo-outline {
   border-radius: 100%;
   margin: 5px 0 0 0;
-  /* background: rgb(218, 122, 143); */
   overflow: hidden;
   height: 119px;
   width: 119px;
@@ -42,12 +40,7 @@ html {
 nav {
   width: 350px;
 }
-/* #logo:hover {
-  transition: height 1s linear;
-  transition: width 1s linear;
-  width: 5px;
-  height: 5px;
-} */
+
 .scroll-logo {
   filter: none;
   transition: width 0.4s;
@@ -66,8 +59,6 @@ nav {
   position: relative;
   color: rgb(109, 99, 101);
   color: white;
-  /* -webkit-text-stroke: rgb(218, 122, 143) 1px; */
-  /* -webkit-text-stroke: black 1px; */
   font-weight: 700;
   margin: 0 10px;
   letter-spacing: 3px;
@@ -82,22 +73,16 @@ nav {
   cursor: pointer;
 }
 #about-link {
-  /* font-family: "Coda", cursive; */
   text-decoration: none;
   font-size: 12px;
 }
 #store-link {
-  /* font-family: "Coda", cursive; */
   text-decoration: none;
   font-size: 12px;
 }
 #title-link {
   text-decoration: none;
 }
-/* .nav:hover {
-  color: rgb(230, 74, 69);
-  color: rgb(218, 122, 143);
-} */
 .video-box {
   overflow: hidden;
   border-radius: 5px;
@@ -111,7 +96,6 @@ nav {
 }
 .load {
   visibility: hidden;
-  /* visibility: visible; */
 }
 .ramen {
   left: 30%;
@@ -173,7 +157,6 @@ nav {
   z-index: 5;
   top: -900px;
   left: 50%;
-  /* visibility: hidden; */
 }
 .pink {
   width: 400px;
@@ -234,7 +217,6 @@ video {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* background: rgb(62, 84, 69); */
   background: rgb(192, 179, 189);
   padding-top: 125px;
 }
@@ -253,11 +235,12 @@ video {
 .grid {
   width: 40%;
   height: 80%;
-  background-image: url("./Anime\ Food/j.png");
-  background-position: center;
-  background-repeat: no-repeat;
   border: solid white 0.5px;
   border-radius: 2px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #cart-box {
@@ -279,17 +262,12 @@ video {
 #active-cart {
   min-width: 165px;
   min-height: 300px;
-  /* background: rgba(255, 255, 255, 0.459); */
-  /* background: rgba(230, 230, 250, 0.534); */
-  /* border: solid 1px rgba(255, 255, 255, 0.459); */
   position: fixed;
   right: 20px;
   bottom: 60px;
   border-radius: 2px;
   display: none;
   text-align: end;
-  /* background: brown; */
-  /* transform: translateX(-200); */
 }
 .addingItem {
   font-size: 10px;
@@ -301,10 +279,8 @@ video {
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-  /* background: blueviolet; */
   justify-content: center;
   padding-top: 115px;
-  /* margin-bottom: 50px; */
 }
 .store-image {
   height: 200px;
@@ -329,7 +305,6 @@ video {
   justify-content: space-between;
 }
 .store-info > p {
-  /* color: blue; */
   font-weight: 500;
 }
 .force-size {
@@ -337,7 +312,6 @@ video {
   z-index: 2;
   width: 150px;
   height: 150px;
-  /* border-radius: 100%; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -353,8 +327,6 @@ video {
   z-index: 5;
   width: 20px;
   position: absolute;
-  /* top: 100px; */
-  /* right: 80%; */
   filter: invert(100);
   display: none;
 }
@@ -362,21 +334,16 @@ video {
   position: fixed;
   top: 30%;
   left: 50%;
-  /* background: rgba(234, 211, 187, 0.856); */
   width: 300px;
   height: 370px;
   transform: translateX(-50%);
   z-index: 9;
   display: none;
   border-radius: 3px;
-  /* border: solid 1px rgba(234, 211, 187, 0.911); */
-  /* display: flex; */
   flex-direction: column;
   justify-content: end;
   background: rgb(253, 242, 244);
-  /* background: black; */
   border: solid 5px rgb(218, 122, 143);
-  /* border: solid 5px transparent; */
 }
 #X {
   margin: 10px 10px 0 0;
@@ -436,7 +403,7 @@ button {
   height: 25px;
   width: 25px;
   text-align: center;
-  /* outline: none; */
+  outline: none;
   border: none;
 }
 #background {
